--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,11 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.hibernate.orm:hibernate-core:6.5.2.Final'
+    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+    implementation 'com.zaxxer:HikariCP:5.1.0'
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.4.1'
+
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
     implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
     implementation 'io.jsonwebtoken:jjwt-orgjson:0.12.6'
