--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ dependencies {
     implementation 'com.zaxxer:HikariCP:7.0.2'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.20.1'
     implementation 'org.mariadb.jdbc:mariadb-java-client:3.4.1'
+    implementation 'org.hibernate.orm:hibernate-core:6.5.2.Final'
+    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
     compileOnly 'jakarta.servlet:jakarta.servlet-api:6.0.0'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.2'
