--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation 'software.amazon.awssdk:aws-core:2.40.17'
     implementation 'software.amazon.awssdk:s3:2.41.14'
     implementation 'com.zaxxer:HikariCP:7.0.2'
+    implementation 'org.hibernate.orm:hibernate-hikaricp:6.5.2.Final'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.20.1'
     implementation 'org.mariadb.jdbc:mariadb-java-client:3.4.1'
     implementation 'org.hibernate.orm:hibernate-core:6.5.2.Final'
